--- a/css/sections.css
+++ b/css/sections.css
@@ -203,6 +203,10 @@ section.hero h1 {
     margin-bottom: 3.5rem;
 }
 
+.section.projects h2 {
+    margin-bottom: 0.5rem;
+}
+
 .section.projects .cards {
     display: flex;
     justify-content: center;
@@ -226,11 +230,11 @@ section.hero h1 {
 }
 
 .section.projects .cards .card .text {
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 .section.projects .cards .card h3 {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .section.projects .cards .card .view-button {
