--- a/css/base.css
+++ b/css/base.css
@@ -42,9 +42,9 @@
 }
 
 
-/* =========================
+/* =========================================================================== 
    GLOBAL & RESETS
-========================= */
+=========================================================================== */
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -54,9 +54,6 @@
 html, body {
     height: 100%;
     scroll-behavior: smooth;
-}
-
-.section:not(.header) {
     scroll-padding-top: 5.5rem;
 }
 
@@ -80,11 +77,6 @@ p, span, pre {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-}
-
-.buttons-wrapper {
-    display: flex;
-    gap: 1.5rem;
 }
 
 .button {
@@ -124,6 +116,18 @@ a {
     font: var(--font-body);
     letter-spacing: var(--ls-body);
     color: var(--clr-text-muted);
+}
+
+.menu-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 label, input, textarea {
@@ -204,18 +208,121 @@ textarea {
 }
 
 .container {
-    height: 100%;
     width: var(--space-container-width);
 }
 
-.section {
+.section:not(.aside) {
     width: var(--space-container-width);
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
-.section:not(.header, .footer) .container {
+.section:not(.header, .footer, .hero, .aside) .container {
     padding: var(--space-section-padding) 0;
 }
+
+/* ===========================================================================
+   RESPONSIVE
+=========================================================================== */
+
+/* Tablet */
+@media (max-width: 1024px) {
+    .section.about .container{
+        flex-direction: column;
+    }
+
+    .section.contact .container{
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: center;
+    }
+
+    .section.contact .right form {
+        width: min(100%, 35rem);
+        padding: 1.5rem;
+        background-color: var(--clr-bg-lighter);
+        border-radius: 16px;
+    }
+}
+
+@media (max-width: 720px) {
+    :root {
+        --font-h1: normal 600 3rem/0.95 var(--ff-display);
+        --font-h2: normal 700 2rem/1.2 var(--ff);
+        --font-h3: normal 600 1.5rem/1.3 var(--ff);
+    }
+}
+
+@media (max-width: 620px) {
+    :root {
+        --font-h1: normal 600 2.5rem/0.95 var(--ff-display);
+        --font-h2: normal 700 2rem/1.2 var(--ff);
+        --font-h3: normal 600 1.5rem/1.3 var(--ff);
+    }
+
+    .section.hero .shapes .shape-1 {
+        width: 360px;   
+        height: 360px;
+    }
+
+    .section.hero .shapes .shape-2 {
+        width: 225px;
+        height: 225px;
+    }
+
+    .section.hero .shapes .shape-3 {
+        width: 150px;
+        height: 150px;
+    }
+
+    .section.projects .cards {
+        grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr)) !important;
+    }
+
+    .section.contact .right form {
+        padding: 1rem;
+    }
+
+    .section.footer .content {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+        margin-bottom: 1.75rem;
+    }
+}
+
+@media (max-width: 380px) {
+    :root {
+        --ls-h1: 0.01em;
+        --font-h3: normal 600 1.25rem/1.3 var(--ff);
+    }
+
+    .section.footer .content .navigation-links{
+        gap: 1.25rem;
+    }
+
+    .section.aside {
+        width: 100%;
+    }
+}
+
+@media (max-width: 340px) {
+    .section.contact .left .heading {
+        margin-bottom: 3.5rem;
+    }
+
+    .section.contact .left .contact-info a {
+        flex-direction: column;
+    }
+}
+
+
+/* @media (max-width: 768px) {
+    :root {
+        --font-h1: normal 600 2.25rem/0.95 var(--ff-display);
+        --font-h2: normal 700 2rem/1.2 var(--ff);
+        --font-h3: normal 600 1.5rem/1.3 var(--ff);
+    }
+} */
