--- a/css/sections.css
+++ b/css/sections.css
@@ -2,6 +2,7 @@
    HEADER
 =========================================================================== */
 .section.header {
+    background-color: hsl(from var(--clr-bg-main) h s l / 0.3);
     height: 5.5rem;
     position: fixed;
     top: 0;
@@ -12,6 +13,56 @@
 .section.header .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.section.header .navigation-links {
+    display: flex;
+}
+
+.section.header #open-menu-button {
+    display: none;
+}
+
+/* ===========================================================================
+   ASIDE
+=========================================================================== */
+.section.aside {
+    display: none;
+    background-color: hsl(from var(--clr-bg-main) h s l / 0.8);
+    height: 100vh;
+    width: 15rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 9999;
+    backdrop-filter: blur(5px);
+}
+
+.section.aside .navigation-links{
+    height: fit-content;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: stretch;
+    gap: 0;
+}
+
+.section.aside ul li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
+
+.section.aside ul li a, .section.aside ul li button {
+    padding: 1rem 1.75rem;
+    text-align: left;
+    width: 100%;
+    display: block;
+}
+
+.section.aside ul li a:hover, .section.aside ul li button:hover {
+    background-color: hsla(0, 0%, 100%, 0.1);
 }
 
 /* ===========================================================================
@@ -23,8 +74,13 @@
     z-index: 999;
 }
 
-section.hero h1 {
+.section.hero h1 {
+    max-width: 40rem;
     margin-bottom: 1.25rem;
+}
+
+.section.hero p.subheading {
+    max-width: 30rem;
 }
 
 .section.hero h1 span.highlight {
@@ -49,6 +105,12 @@ section.hero h1 {
 
 .section.hero .subheading {
     margin-bottom: 2rem;
+}
+
+.buttons-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
 }
 
 .section.hero .shapes {
@@ -132,7 +194,6 @@ section.hero h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-bottom: 2.5rem;
 }
 
 .section.about .right img {
@@ -204,17 +265,17 @@ section.hero h1 {
 }
 
 .section.projects h2 {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
 }
 
 .section.projects .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 2.5rem;
 }
 
 .section.projects .cards .card {
+    margin: 0 auto;
     background-color: var(--clr-bg-lightest);
     border-radius: 16px;
 }
@@ -278,11 +339,11 @@ section.hero h1 {
 }
 
 .section.contact .left .heading {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
 }
 
 .section.contact .left h2 {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
 }
 
 .section.contact .left .contact-info {
