--- a/css/sections.css
+++ b/css/sections.css
@@ -197,59 +197,9 @@
 }
 
 .section.about .right img {
-    max-width: 100%;
+    max-width: 100% !important;
     height: auto;
     border-radius: 16px;
-}
-
-/* ===========================================================================
-   PROCESS
-=========================================================================== */
-.section.process {
-    background-color: var(--clr-bg-lighter);
-}
-
-.section.process .heading {
-    text-align: center;
-    margin-bottom: 3.5rem;
-}
-
-.section.process .cards {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-}
-
-.section.process .cards .card {
-    flex: 1 1 calc(50% - 1rem);
-    padding: 2.5rem;
-    border-radius: 8px;
-    background-color: var(--clr-bg-lightest);
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1.5rem;
-    transition: var(--transition);
-}
-
-.section.process .cards .card:hover {
-    transform: translateY(-4px);
-    box-shadow: var(--glow-hover-card);
-}
-
-.section.process .cards .card .icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    border-radius: 100px;
-    background-color: var(--clr-primary);
-    box-shadow: var(--glow);
-}
-
-.section.process .cards .card h3 {
-    margin-bottom: 0.5rem;
 }
 
 /* ===========================================================================
@@ -285,7 +235,7 @@
 }
 
 .section.projects .cards .card .image img {
-    max-width: 100%;
+    max-width: 100% !important;
     height: auto;
     border-radius: 16px 16px 0 0;
 }
