--- a/css/typography.css
+++ b/css/typography.css
@@ -1,25 +1,39 @@
 @font-face {
     font-family: "Clash Display";
-    src: url('../assets/fonts/clash-display/ClashDisplay-Semibold.woff2') format('woff2'),
-         url('../assets/fonts/clash-display/ClashDisplay-Semibold.woff') format('woff'),
-         url('../assets/fonts/clash-display/ClashDisplay-Semibold.ttf') format('truetype');
+    src: url("/assets/fonts/clash-display/ClashDisplay-Semibold.woff2") format("woff2");
     font-weight: 600;
-    font-display: swap;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Overused Grotesk";
-    src: url("/assets/fonts/overused-grotesk/OverusedGrotesk-VF.woff2") format("woff2"),
-         url("/assets/fonts/overused-grotesk/OverusedGrotesk-VF.woff") format("woff"),
-         url("/assets/fonts/overused-grotesk/OverusedGrotesk-VF.tff") format("tff");
+    src: url("/assets/fonts/overused-grotesk/OverusedGrotesk-Book.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Overused Grotesk";
+    src: url("/assets/fonts/overused-grotesk/OverusedGrotesk-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Overused Grotesk";
+    src: url("/assets/fonts/overused-grotesk/OverusedGrotesk-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
     font-display: swap;
 }
 
 :root {
     /* font families */
-    --ff-display: "Clash Display", system-ui, sans-serif, Arial; 
-    --ff: "Overused Grotesk", system-ui, sans-serif, Arial;
+    --ff-display: "Clash Display", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; 
+    --ff: "Overused Grotesk", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     
     /* fonts */
     --font-h1: normal 600 3.5rem/0.95 var(--ff-display);
